# 100-days-of-code

./: .gitignore  README.md
day-24/Mail Merge Project Start/: main.py
day-27/: converters.py  main.py
day-28/: main.py
day-29/: main.py
day-31/: main.py
day-32/: birthdays.csv  main.py
day-42/: contact.html  hobbies.html  index.html
day-44/: index.html
day-45/: main.py  movies.html  movies.py
day-46/: main.py
day-64/movie-list/: get_movies.py  main.py  pyproject.toml  requirements.txt
day-64/movie-list/templates/: index.html  select.html
day-66-starting-files-cafe-api/: main.py
day-67-starting-files-upgraded-blog/: main.py
day-68-starting-files-flask-auth/: main.py
day-69-starting-files-blog-with-users/: forms.py  main.py
day-72/: main.ipynb  requirements.txt
day-73/: Programming_Languages_(start).ipynb
day-74-LEGO Notebook and Data (start)/: Lego_Analysis_for_Course_(start).ipynb
day-75-Google Trends Data Viz (start)/: Google Trends and Data Visualisation (start).ipynb
day-76/: Google Play Store App Analytics (start).ipynb
day-77/: Computation_with_NumPy_and_N_Dimensional_Arrays_(start).ipynb
day-78/: Seaborn_and_Linear_Regression_(start).ipynb
day-79/: Nobel_Prize_Analysis_(start).ipynb
day-80/: Dr_Semmelweis_Handwashing_Discovery_(start).ipynb
day-81/: Multivariable_Regression_and_Valuation_Model_(start).ipynb
day-82-morse-code-converter/: py-morse.py  py-morse.spec  pyproject.toml
day-82-morse-code-converter/src/pymorse/: __main__.py  cli.py  morse.py
day-82-morse-code-converter/tests/: test_cli.py  test_morse.py
(+67 files in other folders)
