[tool.poetry]
name = "movie-list"
version = "0.1.0"
description = ""
authors = ["Le Tuan Hai <letuanhai@live.com>"]
readme = "README.md"
packages = [{include = "movie_list"}]

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^2.2.3"
flask-wtf = "^1.1.1"
flask-sqlalchemy = "^3.0.3"
flask-bootstrap = "^3.3.7.1"
requests = "^2.28.2"
python-dotenv = "^1.0.0"


[tool.poetry.group.dev.dependencies]
ipython = "^8.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
